--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.2.1",
     "next": "15.3.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
